Fix T71434: Sculpt lags changing brush size

Add a check to wm.radial_control so undo steps are only added
to properties that have undo enabled (as is done with number buttons).